objects/CountryMapping__mdt.object
<CustomObject>
    <fields>
        <fullName>CountryCode__c</fullName>
        <label>Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryName__c</fullName>
        <label>Country Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>test</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Val1</fullName>
                    <default>true</default>
                    <label>Val1</label>
                </value>
                <value>
                    <fullName>Val2</fullName>
                </value>
                <value>
                    <fullName>Val3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CountryMapping</label>
    <pluralLabel>CountryMappings</pluralLabel>
</CustomObject>